--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/home.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> 
-      Dev Sharma
-    </title>
+    <title>Dev Sharma</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
